<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditContactFragment" >

    <Button
        android:id="@+id/editContactBTUpdate"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:text="@string/updateLabel"
        android:textColor="#000000"
        android:textSize="24sp"
        app:backgroundTint="#B1A9A9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editContactRG" />

    <RadioGroup
        android:id="@+id/editContactRG"
        android:layout_width="0dp"
        android:layout_height="155dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editContactETPhone">

        <RadioButton
            android:id="@+id/editContactRBCell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cellLabel"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/editContactRBOffice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/officeLabel"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/editContactRBHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/homeLabel"
            android:textSize="18sp" />

    </RadioGroup>

    <EditText
        android:id="@+id/editContactETName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:ems="10"
        android:hint="Name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editContactETEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:ems="10"
        android:hint="Email"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editContactETName" />

    <EditText
        android:id="@+id/editContactETPhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:ems="10"
        android:hint="Phone"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editContactETEmail" />

</androidx.constraintlayout.widget.ConstraintLayout>